# screen-party

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README 내꺼  README.md  dev-requirements.txt  docker-compose.yml  package.json  pip-requirements.txt  pnpm-lock.yaml  pyproject.toml  ralph.yml  run-claude-loop.sh  run_client.py  run_server.py  temp-on-260101  test_connection.py  turbo.json  임시 메모 !!!
.agent/: events.jsonl  scratchpad.md  summary.md
.claude/: notify-to-windows.sh  settings.json
.claude/claude-config/: settings.json
.claude/devlog/: client-core.md  client-deployment.md  color-system.md  dev-environment.md  drawing-engine.md  fade-animation.md  guest-calibration.md  host-overlay.md  main.md  persistence-mode.md  project-structure.md  pytest-qt.md  server-core.md  server-deployment.md  session-management.md  testing.md  ui-redesign.md  window-sync.md
.devcontainer/: .env.example  devcontainer.json  postCreate.sh
.devcontainer/manual-scripts/: start-dev-servers.sh  start-mirror.sh  start-notify-bridge.ps1
.github/workflows/: ci.yml
apps/desktop/: .eslintrc.cjs  .prettierignore  README.md  package.json  tsconfig.json
apps/desktop/src/main/: index.ts
apps/desktop/src/renderer/src/: App.svelte
apps/desktop/src/renderer/src/assets/: main.css
apps/desktop/src/renderer/src/components/: Versions.svelte
apps/web/: package.json
client/: README.md  client.spec  main.py  pyproject.toml  requirements.txt
client/assets/: ScreenParty-Logo.af
client/scripts/: __init__.py  main.py  package.py
client/src/screen_party_client/: __init__.py  __main__.py  test_clickthrough.py
client/src/screen_party_client/drawing/: __init__.py  bezier_fitter.py  canvas.py  canvas_manager.py  incremental_fitter.py  line_data.py
client/src/screen_party_client/gui/: __init__.py  constants.py  drawing_handler.py  floating_menu.py  main_window.py  overlay_manager.py  overlay_window.py  session_manager.py  state.py  ui_builder.py  window_selector.py
client/src/screen_party_client/network/: __init__.py  client.py  message_handler.py
client/src/screen_party_client/utils/: __init__.py  window_manager.py
client/tests/: conftest.py  test_bezier_fitter.py  test_drawing_canvas.py  test_incremental_continuity.py  test_incremental_fitter.py  test_main_window_gui.py
common/: README.md  pyproject.toml
common/src/screen_party_common/: __init__.py  constants.py  messages.py  models.py
common/tests/: __init__.py
integration/tests/: test_integration.py
scripts/: __init__.py  docker_server.py  format_all.py  lint_all.py  package_client.py  publish_server.py  run.py  run_client.py  run_server.py  start_mirror.sh  test_all.py
server/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
server/scripts/: __init__.py  dockerized_server.py  main.py  publish.py
server/src/screen_party_server/: __init__.py  __main__.py  server.py  session.py
server/tests/: test_server.py  test_session.py
tests/: test_integration.py
