[project]
name = "screen-party"
version = "0.1.0"
description = "Screen Party - 실시간 화면 드로잉 공유 애플리케이션"
requires-python = ">=3.13"
dependencies = [
    "screen-party-common",
    "screen-party-server",
    "screen-party-client",
]

[project.scripts]
server = "scripts.run_server:main"
client = "scripts.run_client:main"

test = "scripts.test_all:main"
format = "scripts.format_all:main"
lint = "scripts.lint_all:main"

docker-server = "scripts.docker_server:main"
publish-server = "scripts.publish_server:main"
package-client = "scripts.package_client:main"

[tool.setuptools]
packages = ["scripts"]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["common", "server", "client"]

[tool.uv.sources]
screen-party-common = { workspace = true }
screen-party-server = { workspace = true }
screen-party-client = { workspace = true }
