[project]
name = "screen-party"
version = "0.1.0"
description = "Screen Party - 실시간 화면 드로잉 공유 애플리케이션"
requires-python = ">=3.13"
dependencies = [
    "screen-party-common",
    "screen-party-server",
    "screen-party-client",
]

[project.scripts]
client = "scripts.run:client"
package-client = "scripts.run:package_client"

server = "scripts.run:server"
publish-server = "scripts.run:publish_server"
dockerized-server = "scripts.run:dockerized_server"

format = "scripts.run:format"
lint = "scripts.run:lint"
test = "scripts.run:test"

[tool.setuptools]
packages = ["scripts"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-qt>=4.4.0",
    "pytest-xvfb>=3.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.uv.workspace]
members = ["common", "server", "client"]

[tool.uv.sources]
screen-party-common = { workspace = true }
screen-party-server = { workspace = true }
screen-party-client = { workspace = true }

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests", "client/tests", "common/tests"]
qt_api = "pyqt6"
markers = [
    "gui: marks tests that require GUI (deselect with '-m \"not gui\"')"
]

[tool.pyright]
pythonVersion = "3.13"
