[tool.poetry]
name = "screen-party-client"
version = "0.1.0"
description = "Screen Party PyQt6 클라이언트"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "screen_party_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
PyQt6 = "^6.8.0"
websockets = "^14.1"
scipy = "^1.15.0"
numpy = "^2.2.0"
qasync = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
# pyinstaller = "^6.11.0"  # TODO: Python 3.13 지원 대기 중 (P1 client-deployment에서 재검토)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
