[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-party-client"
version = "0.1.0"
description = "Screen Party PyQt6 클라이언트"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.8.0",
    "websockets>=14.1",
    "scipy>=1.15.0",
    "numpy>=2.2.0",
    "qasync>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pyright]
pythonVersion = "3.13"
