[project]
name = "screen-party-client"
version = "0.1.0"
description = "Screen Party PyQt6 클라이언트"
requires-python = ">=3.13"
authors = [
    {name = "Screen Party Team"}
]
readme = "README.md"
dependencies = [
    "PyQt6>=6.8.0",
    "websockets>=14.1",
    "scipy>=1.15.0",
    "numpy>=2.2.0",
    "qasync>=0.27.0",
    "screen-party-common",
    "pywin32>=306; platform_system=='Windows'",
    "psutil>=5.9.0",
]

[project.scripts]
client = "screen_party_client.__main__:main"
client-test = "screen_party_client.test_clickthrough:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-qt>=4.4.0",
    "pytest-xvfb>=3.0.0",
    "pyinstaller>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screen_party_client"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
