[project]
name = "screen-party-common"
version = "0.1.0"
description = "Screen Party common models and protocol"
requires-python = ">=3.13"
authors = [
    {name = "Screen Party Team"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screen_party_common"]
