[project]
name = "screen-party-server"
version = "0.1.0"
description = "Screen Party WebSocket 서버"
requires-python = ">=3.13"
authors = [
    {name = "Screen Party Team"}
]
readme = "README.md"
dependencies = [
    "websockets>=14.1",
    "screen-party-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screen_party_server"]
